tests/machine/x/scala/len_map.scala
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:40:34Z
object len_map {
  case class Auto1(a: Int, b: Int)

  def main(args: Array[String]): Unit = {
    println(Auto1(a = 1, b = 2).length)
  }
}
